add security expresstions